--- a/style.css
+++ b/style.css
@@ -1,16 +1,13 @@
-#t{
-    color: aqua;
-    /* text-align: center; */
-}
+
 #f{
-    color: aquamarine;
-   /* text-align: center; */
+   font-size: 30px;
+   font-family: Arial, Helvetica, sans-serif;
+   font-weight: bold;
+    
     
 }
-body{
-    background-color: black;
-    color: aliceblue;
-}
+
+
 #submit:hover{
     color: rgb(211, 39, 39);
      
@@ -18,4 +15,10 @@ body{
 thead{
     background-color: bisque;
     color: black;
+}
+#main{
+    background-color:yellow;
+    text-align: center;
+    padding: 2%;
+    margin: 0% 20% 0% 20%;
 }
