--- a/ecommerce/includes/css/project1.css
+++ b/ecommerce/includes/css/project1.css
@@ -9,9 +9,12 @@
 header {
     background-color: white;
     display: block;
+    width: 100%;
+    height: 100px;
+    
 }
 
-img{
+header img{
     width: 70px;
     height: 70px;
     float: left;
@@ -47,34 +50,117 @@ nav{
     
 }
 nav ul li {
-    display: inline;
-   padding: 10px;
-   padding-left: 5%;
-   padding-right: 5%;
+    display: inline-block;
+   /* padding: 10px;
+   
     width: 20px;
-    height: 40px;
+    height: 40px; */
     
 
     
 }
 nav ul{
-    padding-top:15px;
+    padding: 0;
+    margin: 0;
+
+    /* padding-top:15px; */
     text-align: center;
-    height: 40px;
+    /* height: 40px;
     text-decoration: none;
-    
+     */
 }
 a{
     text-decoration: none;
-    padding: 2px;
+    padding:8px 60px 8px 60px;
+    color: rgb(139, 20, 118);
+    
+}
+nav ul li a:hover{
+    background-color: rgb(148, 12, 112);
+    color: aliceblue;
+}
+search:focus{
+    
 }
 aside{
+    width: 28%;
     float: left;
-    padding-left: 20px;
-    padding-top: 20px;
+    background-color:aliceblue;
+    height: 100vh;
+    margin-top: 6px;
 
 }
 
+aside ul{
+margin: 0px;
+padding: 0px;
+margin-top: 30px;
+width: 100%;
+
+}
 aside ul li{
+    margin-left: 0px;
+    width: 100%;
+    
+}
+aside ul li a{
     padding: 10px;
+    display: block;
+    
+}
+aside ul li a:hover{
+    background-color: rgb(148, 12, 112);
+    color: white;
+}
+
+#products{
+    width:72%;
+    float: right;
+   
+    
+    
+   
+}
+
+#products .card{
+    border: 1px solid black;
+    width: 24%;
+    text-align: center;
+    float: left;
+    margin-top: 10px;
+    margin-left: 10px;
+
+}
+#products .card img{
+    width: 100%;
+    height: 180px;
+
+
+}
+#products .card h3{
+  font-weight: bold;  
+font-size: 24px;
+margin-top: 15px;
+z-index: 1;
+
+}
+#products .card p{
+    margin-top: 15px;
+    padding: 15px;
+
+}
+#products .card button{
+    width: 100px;
+    height: 40px;
+    margin-top: 8px;
+    margin-bottom: 2px;
+
+
+}
+footer{
+    clear: both;
+    width: 100%;
+    height: 100px;
+    background-color: rgb(148, 12, 112);
+    text-align: center;
 }
