--- a/ecommerce/includes/css/project1.css
+++ b/ecommerce/includes/css/project1.css
@@ -63,11 +63,10 @@ nav ul{
     padding: 0;
     margin: 0;
 
-    /* padding-top:15px; */
+    padding-top:15px;
     text-align: center;
-    /* height: 40px;
-    text-decoration: none;
-     */
+    height: 40px;
+    
 }
 a{
     text-decoration: none;
@@ -116,6 +115,7 @@ aside ul li a:hover{
 #products{
     width:72%;
     float: right;
+    
    
     
     
@@ -129,6 +129,7 @@ aside ul li a:hover{
     float: left;
     margin-top: 10px;
     margin-left: 10px;
+    
 
 }
 #products .card img{
