--- a/ecommerce/includes/css/project1.css
+++ b/ecommerce/includes/css/project1.css
@@ -33,8 +33,9 @@ header img{
     
     clear: left;
     float: left;
-    margin-left: 80px;
-    margin-top: -20px;
+    margin-left: 100px;
+    margin-top: -25px;
+    color: rgb(129, 224, 230);
 }
 #search{
     float: right;
@@ -171,7 +172,7 @@ z-index: 1;
 #products .card button{
     width: 100%;
     height: 40px;
-    margin-top: 8px;
+    margin-top: 10px;
     
     border: none;
     
@@ -182,6 +183,7 @@ z-index: 1;
    
     background-color: rgb(148, 12, 112);
     color: white;
+    cursor: pointer;
 }
 footer{
     clear: both;
